16-quassel/quassel-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: irc-server
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - irc.apps.chibifire.com
    secretName: irc-tls
  rules:
  - host: irc.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: quassel-0-vlhd6
          servicePort: 4242
